--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/wwwroot/appsettings.json
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/wwwroot/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AzureAdB2C": {
+    "Authority": "https://TheFreezeTeam.b2clogin.com/TheFreezeTeam.onmicrosoft.com/B2C_1_SignUpSignIn/",
+    "ClientId": "05f50a4b-8511-401e-844b-23ecaca76225",
+    "ValidateAuthority": false
+  },
   "BlazorSettings": {
     "RenderMode": "InteractiveAuto"
   },
