Replace Logging configuration with Serilog configuration.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.json
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.json
@@ -1,13 +1,28 @@
 {
-  // See corresponding C# classes for documentation.
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "Using":  [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "File", "Args": { "path": "Logs/log.txt" } }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Destructure": [
+      { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
+      { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
+      { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
+    ],
+    "Properties": {
+      "Application": "Web.Server"
     }
   },
   "AllowedHosts": "*",
+  "AzureAd": {
+    "Instance": "https://thefreezeteam.b2clogin.com/",
+    "ClientId": "f61bdae5-1d7e-4bab-8a51-ccf0c28db536",
+    "Domain": "thefreezeteam.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_SignUpSignIn"
+  },
   "SampleOptions": {
     "SampleOption": "SampleValue"
   },
