--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.gitignore
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.gitignore
@@ -306,3 +306,4 @@ GeneratedCode/
 /Source/ContainerApps/Web/Web.Contracts/Generated/**
 /Source/ContainerApps/Web/Web.Spa/Generated/**
 /Tests/TimeWarp.Testing/Generated/**
+/Source/ContainerApps/Web/Web.Server/Logs/log.txt
