Make this abstract and thus update the `Empty`  Use Aradalis.Guard.Clauses

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" />
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="JetBrains.Annotations" />
     <PackageReference Include="Microsoft.Extensions.Http" />
