Add IOpenDataQueryParametersMixin and IAuthApiRequestMixin and use them on GetRoles.cs
Update all the projects to properly reference the mixins

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <AdditionalFiles Include="Mixins\RouteMixin.mixin" />
+    <AdditionalFiles Include="Mixins\IAuthApiRequestMixin.mixin" />
+    <AdditionalFiles Include="Mixins\IOpenDataQueryParametersMixin.mixin" />
   </ItemGroup>
 
 </Project>
