--- a/TimeWarp.Architecture/Directory.Build.props
+++ b/TimeWarp.Architecture/Directory.Build.props
@@ -23,8 +23,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
-
-  <!-- Complier Generated files https://andrewlock.net/creating-a-source-generator-part-6-saving-source-generator-output-in-source-control/ -->
+  <!-- Compiler Generated files https://andrewlock.net/creating-a-source-generator-part-6-saving-source-generator-output-in-source-control/ -->
   <PropertyGroup>
     <!-- Persist the source generator (and other) files to disk -->
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
@@ -43,25 +42,32 @@
   </Target>
 
   <ItemGroup>
-    <PackageReference Include="GlobalUsingsAnalyzer" >
+    <PackageReference Include="GlobalUsingsAnalyzer">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
-  <!--This is to add the CommitDate and CommitHash to your assemblyinfo -->
+  <!-- This is to add the CommitDate and CommitHash to your assemblyinfo -->
 
   <Target Name="SetAssemblyMetaData" BeforeTargets="PreBuildEvent">
-    <Exec Command="git log -1 --format=%%ct" ConsoleToMSBuild="true" Condition="'$(OS)' == 'Windows_NT'">
+    <Exec Command="git rev-parse --is-inside-work-tree" IgnoreExitCode="true">
+      <Output TaskParameter="ExitCode" PropertyName="GitInRepo" />
+    </Exec>
+    <PropertyGroup Condition="'$(GitInRepo)' == '0'">
+      <GitRepoAvailable>true</GitRepoAvailable>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(GitInRepo)' != '0'">
+      <GitRepoAvailable>false</GitRepoAvailable>
+    </PropertyGroup>
+
+    <Exec Command="git log -1 --format=%%ct" ConsoleToMSBuild="true" Condition="'$(GitRepoAvailable)' == 'true'">
       <Output TaskParameter="ConsoleOutput" PropertyName="GitCommitTimestamp"/>
     </Exec>
-    <Exec Command="git log -1 --format=%ct" ConsoleToMSBuild="true" Condition="'$(OS)' != 'Windows_NT'">
-      <Output TaskParameter="ConsoleOutput" PropertyName="GitCommitTimestamp"/>
-    </Exec>
-    <PropertyGroup>
+    <PropertyGroup Condition="'$(GitRepoAvailable)' == 'true'">
       <LastCommitDate>$([System.DateTime]::UnixEpoch.AddSeconds($(GitCommitTimestamp)).ToUniversalTime().ToString("yyyy-MM-ddTHH:mm:ssK"))</LastCommitDate>
     </PropertyGroup>
-    <ItemGroup>
+    <ItemGroup Condition="'$(GitRepoAvailable)' == 'true'">
       <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
         <_Parameter1>CommitDate</_Parameter1>
         <_Parameter2>$(LastCommitDate)</_Parameter2>
