--- a/TimeWarp.Templates/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
+++ b/TimeWarp.Templates/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
@@ -38,7 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\README.md">
+    <None Include="..\..\..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
