--- a/TimeWarp.Architecture/Directory.Build.props
+++ b/TimeWarp.Architecture/Directory.Build.props
@@ -50,8 +50,14 @@
 
   <!-- This is to add the CommitDate and CommitHash to your assemblyinfo -->
 
+  <PropertyGroup>
+    <GitCheckCommand>git rev-parse --is-inside-work-tree</GitCheckCommand>
+    <GitLogCommand>git log -1 --format=%%ct</GitLogCommand>
+  </PropertyGroup>
+
   <Target Name="SetAssemblyMetaData" BeforeTargets="PreBuildEvent">
-    <Exec Command="git rev-parse --is-inside-work-tree" IgnoreExitCode="true">
+    <!-- Check if inside a Git repository and suppress output -->
+    <Exec Command="$(GitCheckCommand)" IgnoreExitCode="true" StandardOutputImportance="Low" StandardErrorImportance="Low">
       <Output TaskParameter="ExitCode" PropertyName="GitInRepo" />
     </Exec>
     <PropertyGroup Condition="'$(GitInRepo)' == '0'">
@@ -61,7 +67,8 @@
       <GitRepoAvailable>false</GitRepoAvailable>
     </PropertyGroup>
 
-    <Exec Command="git log -1 --format=%%ct" ConsoleToMSBuild="true" Condition="'$(GitRepoAvailable)' == 'true'">
+    <!-- Get the latest commit timestamp if inside a Git repository -->
+    <Exec Command="$(GitLogCommand)" ConsoleToMSBuild="true" Condition="'$(GitRepoAvailable)' == 'true'" StandardOutputImportance="Low" StandardErrorImportance="Low">
       <Output TaskParameter="ConsoleOutput" PropertyName="GitCommitTimestamp"/>
     </Exec>
     <PropertyGroup Condition="'$(GitRepoAvailable)' == 'true'">
@@ -73,8 +80,7 @@
         <_Parameter2>$(LastCommitDate)</_Parameter2>
       </AssemblyAttribute>
     </ItemGroup>
-    <!--    <Message Importance="high" Text="OS: $(OS)" />-->
-    <!--    <Message Importance="high" Text="CommitDate: $(LastCommitDate)" />-->
   </Target>
+
 
 </Project>
