--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/package.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/package.json
@@ -11,20 +11,20 @@
     "tailwind-watch": "npx tailwindcss -i ./Styles/input.css -o ./wwwroot/css/site.css --minify --watch"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "@typescript-eslint/eslint-plugin": "5.54.1",
-    "@typescript-eslint/parser": "5.54.1",
-    "autoprefixer": "10.4.13",
-    "eslint": "8.35.0",
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.13",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
+    "autoprefixer": "10.4.19",
+    "eslint": "9.3.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "8.7.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
-    "postcss": "8.4.21",
-    "prettier": "2.8.4",
-    "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
   }
 }
