--- a/TimeWarp.Architecture/Directory.Packages.props
+++ b/TimeWarp.Architecture/Directory.Packages.props
@@ -24,6 +24,7 @@
     <PackageVersion Include="Grpc.Net.Client" Version="2.62.0" />
     <PackageVersion Include="Grpc.Net.Client.Web" Version="2.62.0" />
     <PackageVersion Include="JetBrains.Annotations" Version="2023.3.0" />
+    <PackageVersion Include="libphonenumber-csharp" Version="8.13.37" />
     <PackageVersion Include="MediatR" Version="12.2.0" />
     <PackageVersion Include="MediatR.Contracts" Version="2.0.1" />
     <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="6.0.0" />
