--- a/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
+++ b/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="Ardalis.GuardClauses" />
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="JetBrains.Annotations" />
+    <PackageReference Include="libphonenumber-csharp" />
     <PackageReference Include="Microsoft.Extensions.Http" />
     <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="OneOf" />
