Move Aspire projects into folder

--- a/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Api.Server.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Api.Server.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common.Server\Common.Server.csproj" />
+    <ProjectReference Include="..\..\Aspire\Aspire.ServiceDefaults\Aspire.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Api.Infrastructure\Api.Infrastructure.csproj" />
   </ItemGroup>
 
