Add orchistration for the Yarp Project

--- a/TimeWarp.Architecture/Source/ContainerApps/Yarp/Yarp.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Yarp/Yarp.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Common\Common.Server\Common.Server.csproj" />
+    <ProjectReference Include="..\Aspire\Aspire.ServiceDefaults\Aspire.ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
