--- a/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/Aspire.AppHost.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/Aspire.AppHost.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Api\Api.Server\Api.Server.csproj" />
     <ProjectReference Include="..\..\Web\Web.Server\Web.Server.csproj" />
+    <ProjectReference Include="..\..\Yarp\Yarp.csproj" />
   </ItemGroup>
 
 </Project>
