--- a/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/Aspire.AppHost.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/Aspire.AppHost.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Api\Api.Server\Api.Server.csproj" />
+    <ProjectReference Include="..\..\Grpc\Grpc.Server\Grpc.Server.csproj" />
     <ProjectReference Include="..\..\Web\Web.Server\Web.Server.csproj" />
     <ProjectReference Include="..\..\Yarp\Yarp.csproj" />
   </ItemGroup>
