--- a/TimeWarp.Architecture/Source/ContainerApps/Grpc/Grpc.Server/Grpc.Server.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Grpc/Grpc.Server/Grpc.Server.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common.Server\Common.Server.csproj" />
+    <ProjectReference Include="..\..\Aspire\Aspire.ServiceDefaults\Aspire.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Grpc.Infrastructure\Grpc.Infrastructure.csproj" />
   </ItemGroup>
 
