--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/.prettierrc.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/.prettierrc.json
@@ -1,3 +1,7 @@
 {
-  "endOfLine": "auto"
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "printWidth": 120,
+  "endOfLine": "lf"
 }
