--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
@@ -42,11 +42,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <UpToDateCheckBuilt Include="Styles/input.css" Set="Css" />
-    <UpToDateCheckBuilt Include="tailwind.config.js" Set="Css" />
-  </ItemGroup>
-
-  <ItemGroup>
     <!--#if(api)-->
     <ProjectReference Include="..\..\Api\Api.Contracts\Api.Contracts.csproj"/>
     <!--#endif-->
@@ -72,7 +67,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <UpToDateCheckBuilt Include="Styles/input.css" Set="Css" />
+    <UpToDateCheckBuilt Include="tailwind.config.js" Set="Css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <TypeScriptInputs Include="source\*.*"/>
+  </ItemGroup>
+  
+  <ItemGroup>
     <AdditionalFiles Include="Features\Base\StateAccessMixin.mixin"/>
     <AdditionalFiles Include="Mixins\Page.mixin"/>
   </ItemGroup>
@@ -93,6 +96,7 @@
   <Target Name="Tailwind" AfterTargets="Build,CopyScopedCss">
     <Exec Command="npm install" />
     <Exec Command="npm run prettier" />
+    <Exec Command="npm run lint" />
     <Exec Command="npm run build" />
     <Exec Command="npm run css:build" />
   </Target>
