trying to figure out what to add to vcs and what to ignore.

--- a/TimeWarp.Architecture/.gitignore
+++ b/TimeWarp.Architecture/.gitignore
@@ -313,3 +313,5 @@ GeneratedCode/
 /Documentation/Developer/HowToGuides/Api_Contracts/Handling_Mutability_in_API_Contracts.pdf
 /Documentation/Developer/HowToGuides/Api_Contracts/Handling_Nullability_in_API_Contracts.pdf
 /Documentation/Developer/HowToGuides/Api_Contracts/HowToWrite_BFF_API_Contracts.pdf
+/output.txt
+/Source/ContainerApps/Web/Web.Spa/wwwroot/css/site.css
