--- a/TimeWarp.Architecture/Source/ContainerApps/Yarp/appsettings.Development.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Yarp/appsettings.Development.json
@@ -6,22 +6,6 @@
     }
   },
   "ReverseProxy": {
-    "Clusters": {
-      "Api": {
-        "Destinations": {
-          "Api1": {
-            "Address": "https://localhost:7255"
-          }
-        }
-      },
-      "Web": {
-        "Destinations": {
-          "Web1": {
-            "Address": "https://localhost:7000"
-          }
-        }
-      }
-    },
     "Routes": {
       "ApiRoute": {
         "ClusterId": "Api",
@@ -39,6 +23,24 @@
         "ClusterId": "Web",
         "Match": {
           "Path": "/api/web-server/{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "Api": {
+        "Destinations": {
+          "Api1": {
+            "Address": "https://localhost:7255",
+            "Host": "localhost"
+          }
+        }
+      },
+      "Web": {
+        "Destinations": {
+          "Web1": {
+            "Address": "https://localhost:7000",
+            "Host": "localhost"
+          }
         }
       }
     }
