add Microsoft.Extensions.ServiceDiscovery.Yarp remove unused Serilog packages

--- a/TimeWarp.Architecture/Source/ContainerApps/Yarp/Yarp.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Yarp/Yarp.csproj
@@ -8,9 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" />
-    <PackageReference Include="Serilog.Extensions.Logging" />
-    <PackageReference Include="Serilog.Formatting.Compact" />
-    <PackageReference Include="Serilog.Sinks.Console" />
+    <PackageReference Include="Microsoft.Extensions.ServiceDiscovery.Yarp" />
     <PackageReference Include="Yarp.ReverseProxy" />
   </ItemGroup>
 
