Change Cluster ID to match the csproj name.

--- a/TimeWarp.Architecture/Source/ContainerApps/Yarp/appsettings.Development.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Yarp/appsettings.Development.json
@@ -8,36 +8,36 @@
   "ReverseProxy": {
     "Routes": {
       "ApiRoute": {
-        "ClusterId": "Api",
+        "ClusterId": "Api.Server",
         "Match": {
           "Path": "/api/{**catch-all}"
         }
       },
       "WebRoute": {
-        "ClusterId": "Web",
+        "ClusterId": "Web.Server",
         "Match": {
           "Path": "{**catch-all}"
         }
       },
       "WebSwaggerRoute": {
-        "ClusterId": "Web",
+        "ClusterId": "Web.Server",
         "Match": {
           "Path": "/api/web-server/{**catch-all}"
         }
       }
     },
     "Clusters": {
-      "Api": {
+      "Api.Server": {
         "Destinations": {
-          "Api1": {
+          "Api.Server": {
             "Address": "https://localhost:7255",
             "Host": "localhost"
           }
         }
       },
-      "Web": {
+      "Web.Server": {
         "Destinations": {
-          "Web1": {
+          "Web.Server": {
             "Address": "https://localhost:7000",
             "Host": "localhost"
           }
