Add grpc server to yarp and use the apphost name for the address so we don't have to specify the port.
The "Host": "localhost" is required at the moment do to some bug with how it uses the dev-cert.

see https://github.com/dotnet/aspire/issues/836

--- a/TimeWarp.Architecture/Source/ContainerApps/Yarp/appsettings.Development.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Yarp/appsettings.Development.json
@@ -24,13 +24,24 @@
         "Match": {
           "Path": "/api/web-server/{**catch-all}"
         }
+      },
+      "GrpcRoute": {
+        "ClusterId": "Grpc.Server",
+        "Match": {
+          "Path": "/grpc/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/grpc"
+          }
+        ]
       }
     },
     "Clusters": {
       "Api.Server": {
         "Destinations": {
           "Api.Server": {
-            "Address": "https://localhost:7255",
+            "Address": "https://api-server",
             "Host": "localhost"
           }
         }
@@ -38,7 +49,15 @@
       "Web.Server": {
         "Destinations": {
           "Web.Server": {
-            "Address": "https://localhost:7000",
+            "Address": "https://web-server",
+            "Host": "localhost"
+          }
+        }
+      },
+      "Grpc.Server": {
+        "Destinations": {
+          "Grpc.Server": {
+            "Address": "https://grpc-server",
             "Host": "localhost"
           }
         }
