Use high port numbers 10 apart for http and https

--- a/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Properties/launchSettings.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7255"
+      "applicationUrl": "https://localhost:63612;http://localhost:63622"
     }
   }
 }
