ignore launch settings for SPA as you can't launch it alone anyway.

--- a/TimeWarp.Architecture/.gitignore
+++ b/TimeWarp.Architecture/.gitignore
@@ -315,3 +315,4 @@ GeneratedCode/
 /Documentation/Developer/HowToGuides/Api_Contracts/HowToWrite_BFF_API_Contracts.pdf
 /output.txt
 /Source/ContainerApps/Web/Web.Spa/wwwroot/css/site.css
+/Source/ContainerApps/Web/Web.Spa/Properties/launchSettings.json
