Aspire handling HealthChecks and configuration for me now. NICE.

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.Production.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.Production.json
@@ -1,3 +1,15 @@
 {
   // See corresponding C# classes for documentation.
+  "Aspire": {
+    "Microsoft": {
+      "Azure": {
+        "Cosmos": {
+          "AccountEndpoint": "Override In Specific Environment",
+          "Credential": "Override in User Secrets for Dev or Specific Environment",
+          "ConnectionString": "Override in User Secrets for Dev or Specific Environment",
+          "DisableTracing": false
+        }
+      }
+    }
+  }
 }
