--- a/TimeWarp.Architecture/Directory.Packages.props
+++ b/TimeWarp.Architecture/Directory.Packages.props
@@ -3,6 +3,7 @@
     <PackageVersion Include="Ardalis.GuardClauses" Version="4.5.0" />
     <PackageVersion Include="Asp.Versioning.Http" Version="7.0.0" />
     <PackageVersion Include="Asp.Versioning.Mvc" Version="7.0.0" />
+    <PackageVersion Include="Aspire.Hosting" Version="8.0.0-preview.5.24201.12" />
     <PackageVersion Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
     <PackageVersion Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.1" />
     <PackageVersion Include="Aspire.Hosting.Testing" Version="8.0.1" />
