Update to use the new Aspire.Hosting.Yarp project

--- a/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/appsettings.json
+++ b/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/appsettings.json
@@ -5,5 +5,64 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "ReverseProxy": {
+    "Routes": {
+      "ApiRoute": {
+        "ClusterId": "Api.Server",
+        "Match": {
+          "Path": "/api/{**catch-all}"
+        }
+      },
+      "WebRoute": {
+        "ClusterId": "Web.Server",
+        "Match": {
+          "Path": "{**catch-all}"
+        }
+      },
+      "WebSwaggerRoute": {
+        "ClusterId": "Web.Server",
+        "Match": {
+          "Path": "/api/web-server/{**catch-all}"
+        }
+      },
+      "GrpcRoute": {
+        "ClusterId": "Grpc.Server",
+        "Match": {
+          "Path": "/grpc/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/grpc"
+          }
+        ]
+      }
+    },
+    "Clusters": {
+      "Api.Server": {
+        "Destinations": {
+          "Api.Server": {
+            "Address": "https://api",
+            "Host": "localhost"
+          }
+        }
+      },
+      "Web.Server": {
+        "Destinations": {
+          "Web.Server": {
+            "Address": "https://web",
+            "Host": "localhost"
+          }
+        }
+      },
+      "Grpc.Server": {
+        "Destinations": {
+          "Grpc.Server": {
+            "Address": "https://grpc",
+            "Host": "localhost"
+          }
+        }
+      }
+    }
   }
 }
