--- a/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/Aspire.AppHost.csproj
+++ b/TimeWarp.Architecture/Source/ContainerApps/Aspire/Aspire.AppHost/Aspire.AppHost.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\..\Grpc\Grpc.Server\Grpc.Server.csproj" />
     <ProjectReference Include="..\..\Web\Web.Server\Web.Server.csproj" />
     <ProjectReference Include="..\..\Yarp\Yarp.csproj" />
+    <ProjectReference Include="..\Aspire.Hosting.Yarp\Aspire.Hosting.Yarp.csproj" IsAspireProjectResource="false" />
   </ItemGroup>
 
 </Project>
